NXP-28373: Cleanup / Format